Automake the ~heck~ out of this thing

--- a/.env
+++ b/.env
@@ -10,6 +10,12 @@
 COMPOSE_PROJECT_NAME=${COMPOSE_PROJECT_NAME:-mkdocs-material}
 
 #
+# Host volume and docker paths
+#
+HOST_VOLUME="${HOST_VOLUME:-/volume1}"
+HOST_WIKI_PATH="${HOST_WIKI_PATH:-/volume1/docker/wiki}"
+
+#
 # Material for Mkdocs environment variables
 #
 MKDOCS_IMAGE="${MKDOCS_IMAGE:-scottgigawatt/mkdocs-material}"
