--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,7 +4,7 @@ site_description: NAS setups, art, programming, and beyond.
 site_url: https://pages.github.com/scottgigawatt/wiki
 repo_url: https://github.com/scottgigawatt/wiki
 repo_name: scottgigawatt/wiki
-edit_uri: edit/dev/docs/
+edit_uri: edit/main/docs/
 
 theme:
   name: material
