--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,7 @@
 ---
 site_name: Celestial Codex Wiki
 site_description: NAS setups, art, programming, and beyond.
-site_url: https://pages.github.com/scottgigawatt/wiki
+site_url: https://pages.github.com/
 repo_url: https://github.com/scottgigawatt/wiki
 repo_name: scottgigawatt/wiki
 edit_uri: edit/main/docs/
