Save dev progress

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
     "ASTERES",
     "autohide",
     "cheatsheet",
+    "Floaties",
     "fontawesome",
     "javascripts",
     "linebreak",
@@ -20,6 +21,7 @@
     "mkdocs",
     "Nemah",
     "pymdownx",
+    "rosé",
     "scottgigawatt",
     "superfences",
     "tablesort",
