--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,25 +1,26 @@
 ---
-site_name: Celestial Codex Wiki
-site_description: NAS setups, art, programming, and beyond.
+site_name: Celestial Codex
+site_description: "Celestial Codex: where wisdom shines like stars"
 site_url: https://pages.github.com/
 repo_url: https://github.com/scottgigawatt/wiki
 repo_name: scottgigawatt/wiki
 edit_uri: edit/main/docs/
+copyright: Copyright &copy; 2024 Scott Gigawatt
 
 theme:
   name: material
-  logo_dark_mode: assets/logo-light-mode.svg
-  logo_light_mode: assets/logo-light-mode.svg
-  favicon: assets/favicon.svg
+  logo_dark_mode: assets/images/logos/logo-black-hole-dark.svg
+  logo_light_mode: assets/images/logos/logo-black-hole-dark.svg
+  favicon: assets/images/logos/favicon.svg
   icon:
     repo: fontawesome/brands/git-alt
-    edit: material/pencil
-    view: material/eye
+    # edit: material/pencil
+    # view: material/eye
   palette:
     - media: "(prefers-color-scheme: light)"
       scheme: default
       primary: indigo
-      accent: white
+      accent: deep orange
       toggle:
         icon: material/toggle-switch
         name: Switch to dark mode
@@ -36,24 +37,29 @@ theme:
     - search.share
     - navigation.tabs
     - navigation.tabs.sticky
+    - navigation.indexes
     - navigation.instant
     - navigation.tracking
     - navigation.top
     - navigation.sections
     - navigation.expand
+    - navigation.footer
     - toc.follow
     # - toc.integrate
     - content.action.edit
+    - content.action.view
     - content.code.annotate
+    - content.code.copy
+    - content.code.select
     # - header.autohide
-  custom_dir: overrides
+  custom_dir: material
 
 extra_css:
   - assets/stylesheets/extra.css
 
-# extra_javascript:
-#   - https://unpkg.com/tablesort@5.3.0/dist/tablesort.min.js
-#   - assets/javascripts/tablesort.js
+extra_javascript:
+  - https://unpkg.com/tablesort@5.3.0/dist/tablesort.min.js
+  - assets/javascripts/tablesort.js
 
 plugins:
   - search
@@ -74,49 +80,59 @@ markdown_extensions:
   - abbr
   - admonition
   - def_list
+  - tables
+  - toc:
+      permalink: true
+      separator: "-"
+  - footnotes
+  - pymdownx.magiclink
+  - attr_list
+  - md_in_html
+  - meta
   - pymdownx.caret
-  - pymdownx.mark
-  - pymdownx.tilde
+  - pymdownx.details
   - pymdownx.emoji:
       emoji_index: !!python/name:material.extensions.emoji.twemoji
       emoji_generator: !!python/name:material.extensions.emoji.to_svg
       options:
         custom_icons:
           - docs/assets/icons
-  - pymdownx.details
-  - tables
-  - toc:
-      permalink: true
-      separator: "-"
   - pymdownx.highlight
+  - pymdownx.keys
+  - pymdownx.mark
   - pymdownx.superfences:
       custom_fences:
         - name: mermaid
           class: mermaid
           format: !!python/name:pymdownx.superfences.fence_code_format
-  - footnotes
-  - pymdownx.tasklist:
-      custom_checkbox: true
-  - pymdownx.magiclink
-  - attr_list
-  - md_in_html
-  - meta
   - pymdownx.tabbed:
       alternate_style: true
+  - pymdownx.tasklist:
+      custom_checkbox: true
+  - pymdownx.tilde
 
 extra:
   social:
     - icon: fontawesome/brands/github
       link: https://github.com/scottgigawatt/wiki
-      name: Wiki
+      name: 📚 Wiki
+    - icon: fontawesome/brands/docker
+      link: https://hub.docker.com/repositories/scottgigawatt
+      name: ⚡️ Scott Gigawatt
+    - icon: fontawesome/brands/discord
+      link: https://discord.gg/b8kyRaFZJr
+      name: ✨ASTERES✨
 
 nav:
-  - General Topics:
-      - About: index.md
+  - Home: index.md
+  - Getting started:
+      - Welcome: general/index.md
       - Using MkDocs:
           - Overview: general/mkdocs.md
           - FAQ: general/mkdocs-faq.md
-  - Synology Guides:
+  - Reference:
       - Direct Ethernet Config: synology-guides/direct-ethernet-config.md
-  - Hosting Guides:
+  - GitHub:
+      - Overview: github/projects.md
+  - Hosting:
       - Hosting and Pool Maintenance: hosting/hosting_and_pool_maintenance.md
