Update github projects

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,15 +14,23 @@
     "cheatsheet",
     "Floaties",
     "fontawesome",
+    "generatin",
+    "Gluetun",
     "javascripts",
+    "Kometa",
     "linebreak",
     "magiclink",
     "materialx",
     "mkdocs",
     "Nemah",
+    "Plundarr",
+    "Privateerr",
     "pymdownx",
+    "Radarr",
+    "Raytracer",
     "rosé",
     "scottgigawatt",
+    "Sonarr",
     "superfences",
     "tablesort",
     "tasklist",
