--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 ---
 site_name: Celestial Codex
-site_description: NAS setups, art, programming, and beyond.
+site_description: "Celestial Codex: where wisdom shines like stars"
 site_url: https://pages.github.com/
 repo_url: https://github.com/scottgigawatt/wiki
 repo_name: scottgigawatt/wiki
@@ -9,9 +9,9 @@ copyright: Copyright &copy; 2024 Scott Gigawatt
 
 theme:
   name: material
-  logo_dark_mode: assets/logo-light-mode.svg
-  logo_light_mode: assets/logo-light-mode.svg
-  favicon: assets/favicon.svg
+  logo_dark_mode: assets/images/logos/logo-black-hole-dark.svg
+  logo_light_mode: assets/images/logos/logo-black-hole-dark.svg
+  favicon: assets/images/logos/favicon.svg
   icon:
     repo: fontawesome/brands/git-alt
     # edit: material/pencil
@@ -20,7 +20,7 @@ theme:
     - media: "(prefers-color-scheme: light)"
       scheme: default
       primary: indigo
-      accent: white
+      accent: deep orange
       toggle:
         icon: material/toggle-switch
         name: Switch to dark mode
@@ -52,7 +52,7 @@ theme:
     - content.code.copy
     - content.code.select
     # - header.autohide
-  custom_dir: overrides
+  custom_dir: material
 
 extra_css:
   - assets/stylesheets/extra.css
@@ -129,7 +129,10 @@ nav:
       - Using MkDocs:
           - mkdocs/index.md
           - FAQ: mkdocs/mkdocs-faq.md
-  - Synology Guides:
+  - Reference:
       - Direct Ethernet Config: synology-guides/direct-ethernet-config.md
-  - Hosting Guides:
+  - GitHub:
+      - github/index.md
+      - Projects: github/projects.md
+  - Hosting:
       - Hosting and Pool Maintenance: hosting/hosting_and_pool_maintenance.md
