--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -52,8 +52,8 @@ theme:
       toggle:
         icon: material/brightness-4
         name: Switch to system preference
-  logo: assets/images/banners/banner_light_2.png
-  favicon: assets/images/logos/favicon.svg
+  logo: assets/images/banners/banner_light_3.png
+  favicon: assets/images/favicon.ico
   icon:
     repo: fontawesome/brands/git-alt
     # edit: material/pencil
